# object-introspection

./: CMakeLists.txt  elfutils_wrapper.h  struct_definitions.cpp  struct_definitions.h
src/: CMakeLists.txt  CodeGen.cpp  CodeGen.h  ContainerInfo.cpp  ContainerInfo.h  Descs.cpp  Descs.h  DrgnUtils.cpp  DrgnUtils.h  Features.h  OICodeGen.cpp  OICodeGen.h  OICodeGen2.cpp  OICodeGen2.h  OID.cpp  OIDebugger.cpp  OIDebugger.h  OITraceCode.cpp  OIUtils.h  Serialize.h  SymbolService.cpp  TreeBuilder.cpp  drgn_helpers.cpp  drgn_helpers.h  drgn_parser.cpp  drgn_parser.h  dwarf_parser.cpp  dwarf_parser.h  required_type_collector.cpp  required_type_collector.h  topo_sorter.cpp  topo_sorter.h  type_flattener.cpp  type_flattener.h  type_graph.h  types.cpp  types.h  visitor.h
src/type_graph/: AddChildren.cpp  AddChildren.h  AddPadding.cpp  AddPadding.h  AlignmentCalc.cpp  AlignmentCalc.h  CMakeLists.txt  DrgnParser.cpp  DrgnParser.h  Flattener.cpp  Flattener.h  GenDecls.cpp  GenDecls.h  GenDefs.cpp  GenDefs.h  NameGen.cpp  NameGen.h  PassManager.cpp  PassManager.h  Printer.cpp  Printer.h  RemoveTopLevelPointer.cpp  RemoveTopLevelPointer.h  RequiredTypeCollector.cpp  RequiredTypeCollector.h  TopoSorter.cpp  TopoSorter.h  TypeGraph.h  TypeIdentifier.cpp  TypeIdentifier.h  Types.cpp  Types.h  Visitor.h  drgn_parser.cpp  drgn_parser.h  flattener.cpp  flattener.h  printer.cpp  printer.h  required_type_collector.cpp  (+9 more)
test/: CMakeLists.txt  ajor-bitfields.cpp  ajor-dedup-suffix-bug.cpp  ajor-inheritance.cpp  ajor-multi-inheritance-dedup-bug.cpp  ajor-zero-length-array.cpp  target_prog.cpp  (+15 more)
(+56 files in other folders)
